[workspace]
members = [ "justid-config", "justid-dante", "justid-heimdall","justid-kraken", "justid-ragnar"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.1" }
tokio = { version = "1.44.1", default-features = false }
tower-http = { version = "0.6.2" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.97" }
sqlx = { version = "0.8.3", default-features = false }
chrono = { version = "0.4.40" }
uuid = { version = "1.16.0" }
